--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
 				</div>
 				<div class="keypad">
 					<div class="row">
-						<button class="btn cancel-all">CE</button>
-						<button class="btn cancel">C</button>
+						<button class="btn clear-all">CE</button>
+						<button class="btn backspace"><img src="./Public/backspace-icon.svg" alt=""></button>
 						<button class="btn modulas">%</button>
-						<button class="btn divide">/</button>
+						<button class="btn divide operator">÷</button>
 					</div>
 					<div class="row">
 						<button class="btn 7">7</button>
 						<button class="btn 8">8</button>
 						<button class="btn 9">9</button>
-						<button class="btn multipy">x</button>
+						<button class="btn multipy operator">x</button>
 					</div>
 					<div class="row">
 						<button class="btn 4">4</button>
 						<button class="btn 5">5</button>
 						<button class="btn 6">6</button>
-						<button class="btn subtract"><hr /></button>
+						<button class="btn subtract operator"><hr /></button>
 					</div>
 					<div class="row">
 						<button class="btn 3">3</button>
 						<button class="btn 2">2</button>
 						<button class="btn 1">1</button>
-						<button class="btn add">+</button>
+						<button class="btn add operator">+</button>
 					</div>
-					<div class="row">
+					<div class="last-row">
 						<button class="btn zero">0</button>
 						<button class="btn period">.</button>
-						<button class="btn eqaul">=</button>
+						<button class="btn eqaul operator">=</button>
 					</div>
 				</div>
 			</div>
